--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ canvas{display:block;}
 <canvas id="c"></canvas>
 
 <script>
+/* ===== 画布 ===== */
 const c=document.getElementById("c");
 const ctx=c.getContext("2d");
 function resize(){
@@ -25,79 +26,102 @@ function resize(){
 resize();
 addEventListener("resize",resize);
 
+/* ===== 树位置 ===== */
 const treeX=c.width*0.38;
 const treeY=c.height*0.78;
 
+/* ===== 树层（更逼真） ===== */
 const layers=[
  {h:130,w:360},
  {h:120,w:320},
  {h:110,w:280},
  {h:100,w:240},
- {h: 90,w:200},
- {h: 80,w:160},
+ {h:90 ,w:200},
+ {h:80 ,w:160}
 ];
 
-const snow=[...Array(180)].map(()=>({
+/* ===== ❄️ 雪 ===== */
+const snow=[...Array(160)].map(()=>({
  x:Math.random()*c.width,
  y:Math.random()*c.height,
- r:Math.random()*2+0.5,
- v:Math.random()*1.2+0.4,
- s:Math.random()*0.6
+ r:Math.random()*2+0.6,
+ v:Math.random()*1.2+0.4
 }));
 
 function drawSnow(){
  ctx.fillStyle="white";
  snow.forEach(s=>{
   s.y+=s.v;
-  s.x+=Math.sin(s.y*0.01)*s.s;
-  if(s.y>c.height){s.y=-10;s.x=Math.random()*c.width;}
+  if(s.y>c.height){s.y=-10;}
   ctx.beginPath();
   ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
   ctx.fill();
  });
 }
 
-function drawBranchLayer(baseY,h,w,seed){
+/* ===== 🌲 树 ===== */
+function drawLayer(baseY,h,w,seed){
  for(let y=0;y<h;y++){
   const p=y/h;
   const width=w*(1-p);
-  const noise=Math.sin((y+seed)*0.25)*10+Math.sin(y*0.9)*6;
+  const noise=Math.sin((y+seed)*0.3)*8+(Math.random()-0.5)*4;
   const droop=p*p*14;
-  ctx.fillStyle=`rgb(20,${90+p*80},30)`;
-  ctx.fillRect(treeX-width/2-noise/2,baseY-y+droop,width+noise,1);
+  ctx.fillStyle=`rgb(20,${90+Math.random()*40},40)`;
+  ctx.fillRect(
+    treeX-width/2-noise/2,
+    baseY-y+droop,
+    width+noise,
+    1
+  );
  }
 }
 
 function drawTree(){
  let y=treeY;
  layers.forEach((l,i)=>{
-  drawBranchLayer(y,l.h,l.w,i*40);
+  drawLayer(y,l.h,l.w,i*40);
   y-=l.h-22;
  });
  ctx.fillStyle="#5a3a1c";
  ctx.fillRect(treeX-22,treeY,44,60);
 }
 
+/* ===== 🌟 单一柔光光环 ===== */
 function drawHalo(t){
  ctx.save();
- ctx.translate(treeX,treeY-210);
+ ctx.translate(treeX,treeY-230);
  ctx.rotate(t*0.0004);
- ctx.beginPath();
- ctx.strokeStyle="rgba(255,220,160,0.25)";
- ctx.lineWidth=4;
+ ctx.strokeStyle="rgba(255,220,160,0.28)";
+ ctx.lineWidth=4+Math.sin(t*0.002)*1.2;
  ctx.shadowBlur=25;
  ctx.shadowColor="rgba(255,220,160,0.9)";
+ ctx.beginPath();
  ctx.arc(0,0,210,0,Math.PI*2);
  ctx.stroke();
  ctx.restore();
  ctx.shadowBlur=0;
 }
 
+/* ===== 🎁 祝福文字 ===== */
+function drawText(t){
+ ctx.save();
+ ctx.font="bold 42px 'Microsoft YaHei',sans-serif";
+ ctx.fillStyle="#ffeaa7";
+ ctx.shadowBlur=25;
+ ctx.shadowColor="#ffd700";
+ const o=Math.sin(t*0.002)*6;
+ ctx.fillText("祝徐露涵",c.width*0.62,c.height*0.42+o);
+ ctx.fillText("圣诞节快乐 🎄",c.width*0.62,c.height*0.48+o);
+ ctx.restore();
+}
+
+/* ===== 动画 ===== */
 function animate(t){
  ctx.clearRect(0,0,c.width,c.height);
  drawSnow();
  drawTree();
  drawHalo(t);
+ drawText(t);
  requestAnimationFrame(animate);
 }
 animate();
