--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ html,body{
 canvas{display:block;}
 </style>
 </head>
+
 <body>
 <canvas id="c"></canvas>
 
@@ -19,6 +20,7 @@ canvas{display:block;}
 /* ===== 画布 ===== */
 const c=document.getElementById("c");
 const ctx=c.getContext("2d");
+
 function resize(){
   c.width=innerWidth;
   c.height=innerHeight;
@@ -30,48 +32,53 @@ addEventListener("resize",resize);
 const treeX=c.width*0.38;
 const treeY=c.height*0.78;
 
-/* ===== 树层（更逼真） ===== */
+/* ===== 树层 ===== */
 const layers=[
  {h:130,w:360},
  {h:120,w:320},
  {h:110,w:280},
  {h:100,w:240},
- {h:90 ,w:200},
- {h:80 ,w:160}
+ {h:90,w:200},
+ {h:80,w:160}
 ];
 
-/* ===== ❄️ 雪 ===== */
-const snow=[...Array(160)].map(()=>({
+/* ===== 雪 ===== */
+const snow=[...Array(180)].map(()=>({
  x:Math.random()*c.width,
  y:Math.random()*c.height,
- r:Math.random()*2+0.6,
- v:Math.random()*1.2+0.4
+ r:Math.random()*2+0.5,
+ v:Math.random()*1.2+0.4,
+ s:Math.random()*0.6
 }));
 
 function drawSnow(){
  ctx.fillStyle="white";
  snow.forEach(s=>{
   s.y+=s.v;
-  if(s.y>c.height){s.y=-10;}
+  s.x+=Math.sin(s.y*0.01)*s.s;
+  if(s.y>c.height){s.y=-10;s.x=Math.random()*c.width;}
   ctx.beginPath();
   ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
   ctx.fill();
  });
 }
 
-/* ===== 🌲 树 ===== */
-function drawLayer(baseY,h,w,seed){
+/* ===== 树体（逼真） ===== */
+function drawBranchLayer(baseY,h,w,seed){
  for(let y=0;y<h;y++){
   const p=y/h;
   const width=w*(1-p);
-  const noise=Math.sin((y+seed)*0.3)*8+(Math.random()-0.5)*4;
+  const noise=
+    Math.sin((y+seed)*0.25)*10 +
+    Math.sin(y*0.9)*6 +
+    (Math.random()-0.5)*4;
   const droop=p*p*14;
-  ctx.fillStyle=`rgb(20,${90+Math.random()*40},40)`;
+  ctx.fillStyle=`rgb(20,${90+p*70},30)`;
   ctx.fillRect(
-    treeX-width/2-noise/2,
-    baseY-y+droop,
-    width+noise,
-    1
+   treeX-width/2-noise/2,
+   baseY-y+droop,
+   width+noise,
+   1
   );
  }
 }
@@ -79,22 +86,91 @@ function drawLayer(baseY,h,w,seed){
 function drawTree(){
  let y=treeY;
  layers.forEach((l,i)=>{
-  drawLayer(y,l.h,l.w,i*40);
+  drawBranchLayer(y,l.h,l.w,i*40);
   y-=l.h-22;
  });
  ctx.fillStyle="#5a3a1c";
  ctx.fillRect(treeX-22,treeY,44,60);
 }
 
-/* ===== 🌟 单一柔光光环 ===== */
+/* ===== 彩灯 ===== */
+const colors=["#ff4d4d","#ffd700","#00e5ff","#7CFF00","#ff7aff"];
+const lights=[...Array(120)].map(()=>({
+ layer:Math.floor(Math.random()*layers.length),
+ t:Math.random(),
+ phase:Math.random()*Math.PI*2,
+ c:colors[Math.floor(Math.random()*colors.length)]
+}));
+
+function drawLights(t){
+ lights.forEach(l=>{
+  const offset=layers.slice(0,l.layer).reduce((a,b)=>a+b.h-22,0);
+  const layer=layers[l.layer];
+  const y=treeY-offset-l.t*layer.h;
+  const r=layer.w*(1-l.t)/2;
+  const x=treeX+Math.cos(l.t*8+t*0.002)*r;
+  const glow=3+Math.sin(t*0.006+l.phase)*2;
+
+  ctx.beginPath();
+  ctx.fillStyle=l.c;
+  ctx.shadowBlur=glow*2;
+  ctx.shadowColor=l.c;
+  ctx.arc(x,y,glow,0,Math.PI*2);
+  ctx.fill();
+ });
+ ctx.shadowBlur=0;
+}
+
+/* ===== 苹果 & 糖果 ===== */
+const ornaments=[...Array(30)].map(()=>({
+ layer:Math.floor(Math.random()*layers.length),
+ t:Math.random(),
+ a:Math.random()*Math.PI*2,
+ type:Math.random()>0.5?"apple":"candy"
+}));
+
+function drawApple(x,y){
+ ctx.fillStyle="#c80000";
+ ctx.beginPath();
+ ctx.arc(x,y,6,0,Math.PI*2);
+ ctx.fill();
+}
+
+function drawCandy(x,y){
+ ctx.save();
+ ctx.translate(x,y);
+ ctx.rotate(-Math.PI/6);
+ ctx.lineWidth=3;
+ for(let i=0;i<6;i++){
+  ctx.strokeStyle=i%2?"#ff3b3b":"white";
+  ctx.beginPath();
+  ctx.moveTo(0,-8+i*3);
+  ctx.lineTo(0,8+i*3);
+  ctx.stroke();
+ }
+ ctx.restore();
+}
+
+function drawOrnaments(){
+ ornaments.forEach(o=>{
+  const offset=layers.slice(0,o.layer).reduce((a,b)=>a+b.h-22,0);
+  const layer=layers[o.layer];
+  const y=treeY-offset-o.t*layer.h;
+  const r=layer.w*(1-o.t)/2;
+  const x=treeX+Math.cos(o.a)*r;
+  o.type==="apple"?drawApple(x,y):drawCandy(x,y);
+ });
+}
+
+/* ===== 光环 ===== */
 function drawHalo(t){
  ctx.save();
- ctx.translate(treeX,treeY-230);
+ ctx.translate(treeX,treeY-220);
  ctx.rotate(t*0.0004);
- ctx.strokeStyle="rgba(255,220,160,0.28)";
- ctx.lineWidth=4+Math.sin(t*0.002)*1.2;
- ctx.shadowBlur=25;
- ctx.shadowColor="rgba(255,220,160,0.9)";
+ ctx.strokeStyle="rgba(255,220,160,0.25)";
+ ctx.lineWidth=4;
+ ctx.shadowBlur=26;
+ ctx.shadowColor="rgba(255,220,160,0.8)";
  ctx.beginPath();
  ctx.arc(0,0,210,0,Math.PI*2);
  ctx.stroke();
@@ -102,10 +178,10 @@ function drawHalo(t){
  ctx.shadowBlur=0;
 }
 
-/* ===== 🎁 祝福文字 ===== */
+/* ===== 祝福文字 ===== */
 function drawText(t){
  ctx.save();
- ctx.font="bold 42px 'Microsoft YaHei',sans-serif";
+ ctx.font="bold 42px 'Microsoft YaHei'";
  ctx.fillStyle="#ffeaa7";
  ctx.shadowBlur=25;
  ctx.shadowColor="#ffd700";
@@ -118,12 +194,25 @@ function drawText(t){
 /* ===== 动画 ===== */
 function animate(t){
  ctx.clearRect(0,0,c.width,c.height);
+
  drawSnow();
  drawTree();
+
+ ctx.globalCompositeOperation="lighter";
+ drawLights(t);
+ drawOrnaments();
+ ctx.globalCompositeOperation="source-over";
+
  drawHalo(t);
  drawText(t);
+
  requestAnimationFrame(animate);
 }
+animate();
+</script>
+</body>
+</html>
+
 animate();
 </script>
 </body>
